# timesage

./: MANIFEST.in  README.md  pyproject.toml
docs/: api-reference.md  examples.md  faq.md  features.md  getting-started.md  index.md  interpretation.md  models.md  plotting.md  user-guide.md
notebooks/: timesage_demo.ipynb
timesage/: __init__.py
timesage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
timesage/core/: __init__.py  result.py  timeseries.py
timesage/datasets/: __init__.py  loader.py
timesage/eda/: __init__.py  profiler.py
timesage/features/: __init__.py  lag.py  pipeline.py  temporal.py  window.py
timesage/interpret/: __init__.py  diagnostics.py  explainer.py  report.py
timesage/models/: __init__.py  auto.py  base.py  ml.py  statistical.py
timesage/plot/: __init__.py  diagnostic.py  theme.py  timeplots.py
timesage/utils/: __init__.py  helpers.py
timesage_ts.egg-info/: PKG-INFO  SOURCES.txt
